# PCA

./: README.md
PCAV1/: CMakeLists.txt
PCAV1/src/: pca.h  pca_data.txt  pca_example.py  pca_test.cpp
